--- a/Network/네트워크 기초.md
+++ b/Network/네트워크 기초.md
@@ -19,7 +19,7 @@
 ## HTTP & HTTPS
 웹 서버와 클라이언트(보통 웹 브라우저) 간의 데이터를 주고받는 방식을 정의하는 프로토콜
 
-**✅ HTTP (HyperText Transfer Protocol)**
+### ✅ HTTP (HyperText Transfer Protocol)
 
 `http://www.google.com:80/app/index.html`
 
@@ -29,7 +29,9 @@
 - `비연결성(Connectionless)`: 각 요청은 독립적으로 처리되며, 한 요청이 완료된 후에는 연결이 끊김
 - `무상태성(Stateless)`: 서버는 각 요청을 독립적으로 처리하며, 이전 요청의 상태 기억 ❌
 
-**✅ HTTPS (HyperText Transfer Protocol Secure)**
+<br>
+
+### ✅ HTTPS (HyperText Transfer Protocol Secure)
 
 ` https://www.google.com:443`
 
@@ -44,25 +46,33 @@ Internet Protocol의 약자
 통신 단위: Packet (Package + Bucket)
 
 **✅ 클라이언트의 패킷 전달**
+
 ![클라이언트 패킷 전달](https://miro.medium.com/v2/resize:fit:1100/format:webp/1*Y9VXeNZStE-Q8ZpNEUrLZQ.png) 
 
 **✅ 서버의의 패킷 전달**
+
 ![서버 패킷 전달](https://miro.medium.com/v2/resize:fit:1100/format:webp/1*t1AVYP8-LR4_7U68cGn-pg.png)   
 
 **🚨 문제점**
 
-1. `비연결성` : 도착지 서버가 서비스 불능 상태일 경우 
+1. `비연결성` : 도착지 서버가 서비스 불능 상태일 경우
+   
     ![비연결성](https://miro.medium.com/v2/resize:fit:1100/format:webp/1*tBY4Mjdm-jgqjdUEZiKY9A.png)   
-    서버가 패킷을 받을 수 있는 상태가 아니지만, 출발 시점에 이를 알 수 없음
 
-2. `비신뢰성`
+   서버가 패킷을 받을 수 있는 상태가 아니지만, 출발 시점에 이를 알 수 없음
 
+3. `비신뢰성`
+   
     (1) 패킷 소실
-      ![비신뢰성](https://miro.medium.com/v2/resize:fit:1100/format:webp/1*U7bUIrhCbnO4vGiIHaNfag.png)   
-
+   <br>
+   
+   ![비신뢰성](https://miro.medium.com/v2/resize:fit:1100/format:webp/1*U7bUIrhCbnO4vGiIHaNfag.png)   
+    <br>
     (2) 패킷 전달 순서 보장 ❌
-      ![비신뢰성2](https://miro.medium.com/v2/resize:fit:1100/format:webp/1*_q9Et3jBxpekTETs_3iqkg.png)   
-
+   <br>
+   
+   ![비신뢰성2](https://miro.medium.com/v2/resize:fit:1100/format:webp/1*_q9Et3jBxpekTETs_3iqkg.png)   
+   <br>
 
 **💡 해결**  : `TCP 프로토콜`
 
