--- a/Network/네트워크 기초.md
+++ b/Network/네트워크 기초.md
@@ -8,12 +8,31 @@
 # 🎆 네트워크 기초
 ## Internet
 - 전 세계적으로 연결되어있는 `컴퓨터 네트워크 통신망`
+- 글로벌하게 연결된 컴퓨터 네트워크의 시스템
 - 웹(World Wide Web), 전자메일, 파일공유(Torrent), 동영상 스트리밍, 온라인게임, 모바일앱 등 다양한 서비스들을 포함
 - `프로토콜(TCP/IP)`을 기반으로 통신
+
+   ![internet](https://www.books.weniv.co.kr/images/basecamp-html-css/chapter01/01-1.png)
+   > 🚨 Web !== Internet  
+   >    웹은 인터넷과 다르며, 웹은 인터넷을 기반으로 한 수많은 서비스 중 하나  
+   >    `인터넷` = 인프라(기반 구조)  
+   >    `웹` = 그 위에서 동작하는 서비스 중 하나
+   >    ![web vs internet](https://www.books.weniv.co.kr/images/basecamp-html-css/chapter01/01-2.png)
 
 
 ## HTTP & HTTPS
 웹 서버와 클라이언트(보통 웹 브라우저) 간의 데이터를 주고받는 방식을 정의하는 프로토콜
+
+   > 💡 프로토콜   
+   >  전송 규칙, 약속  
+   >  컴퓨터나 장치 간에 데이터를 주고받는 전송 규칙 또는 약속  
+   >  웹 위에 있는 다양한 서비스들(인터넷, FTP, SSH, 이메일 등)은 각기 다른 프로토콜 사용
+   > | 이름 | 프로토콜 |  
+   > | --- | --- |  
+   > | WWW(웹) | HTTP/HTTPS |  
+   > | FTP(파일전송) | FTP/SFTP |  
+   > | Email(이메일) | SMTP/POP3/IMAP|  
+
 
 ### ✅ HTTP (HyperText Transfer Protocol)
 
